# CoreEngineModule

./: .gitignore  0001-forward-ssao-fog-pipelines.patch  0001_viewport_multiselect.patch  0002-forward-offscreen-post.patch  0002_imgui_multiselect.patch  0003_translate_gizmo_multiselect.patch  0004_rotate_scale_gizmo_multiselect.patch  0007-dx12-add-cubemap-all-faces-RTV-DSV-framebuffer-cube.patch  0008-renderer-pointshadow-vi-pipeline-and-shader.patch  0009-renderer-pointshadow-vi-pass-fallback-disable-cache.patch  0011-dx12-pso-stream-padding.patch  CMakeLists.txt  CMakeSettings.json  README.md
assets/animBindings/: fsm_test_gameplay_bindings.phaseB.json
assets/animControllers/: fsm_test_locomotion_action.phaseB.json
assets/animNotifies/: fsm_test_locomotion_notifies.phaseB.json
assets/animations/: Breathing Idle.fbx  Swing Dancing.fbx  idle.fbx  jump.fbx  left strafe walking.fbx  left strafe.fbx  left turn 90.fbx  left turn.fbx  right strafe walking.fbx  right strafe.fbx  right turn 90.fbx  right turn.fbx  running.fbx  walking.fbx
assets/gameplay/graphs/: default_humanoid.layered_graph.json
assets/levels/: demo.level.json  demo.level.with_fsm_test.locomotion.json  demo.level.with_fsm_test.locomotion.phaseB.json  demo.level1.json
assets/shaders/: CopyToSwapChain_dx12.hlsl  DebugCubeAtlas_dx12.hlsl  DebugLines_dx12.hlsl  DebugText_dx12.hlsl  DeferredGBufferSkinned_dx12.hlsl  DeferredGBuffer_dx12.hlsl  DeferredLighting_dx12.hlsl  FS_Phong.frag  FullScreen.frag  FullScreen.vert  GlobalShaderInstanced_dx12.hlsl  GlobalShaderSkinned_dx12.hlsl  GlobalShader_dx12.hlsl  Mesh_dx12.hlsl  PlanarComposite_dx12.hlsl  ReflectionCaptureLayered_dx12.hlsl  ReflectionCaptureSkinned_dx12.hlsl  ReflectionCaptureVI_dx12.hlsl  ReflectionCapture_dx12.hlsl  ReflectionProbePrefilter_dx12.hlsl  SSAOBlur_dx12.hlsl  SSAOComposite_dx12.hlsl  SSAO_dx12.hlsl  ShadowDepthSkinned_dx12.hlsl  ShadowDepth_dx12.hlsl  ShadowPointSkinned_dx12.hlsl  ShadowPointVI_dx12.hlsl  ShadowPoint_dx12.hlsl  Shadow_dx12.hlsl  SkinningCommon_dx12.hlsli  Skybox_dx12.hlsl  VS_Phong.vert
assets/textures/: watermelon_height.txt  watermelon_heightPN.txt
src/: Core.ixx  ResourceManager.cppm  ResourceManager.ixx  ResourceManager_core.cppm  ResourceManager_impl.cpp  ResourceManager_texture.cppm  main.cpp
src/App/: AppBootstrap.cpp  AppBootstrap.h  AppLifecycle.cpp  AppLifecycle.h  AppRuntimeHelpers.h  DebugUiHost.cpp  DebugUiHost.h  EditorViewportInteraction.h  EditorViewportInteraction_Core.inl  EditorViewportInteraction_Mouse.inl  EditorViewportInteraction_ParticleEmitter.inl  Win32AppShell.cpp  Win32AppShell.h
src/Assets/: AssetManager.cppm  ResourceManager_core.cppm  ResourceManager_mesh.cppm  ResourceManager_texture.cppm
src/Core/: Core.ixx
src/Core/Hash/: HashUtils.cppm
src/Core/Input/: Input.cppm
src/Core/Math/: Geometry.cppm  MathUtils.cppm
src/Gameplay/: Gameplay.cppm  GameplayAnimationBridge.cppm  GameplayGraph.cppm  GameplayRefactorNotes.md  GameplayRuntime.cppm  GameplayWorld.cppm  GameplayWorld_component_accessors.inl  GameplayWorld_impl.cppm  Gameplay_impl.cppm
src/Gameplay/Animation/: GameplayAnimationBridgeSystem.cppm
src/Gameplay/Character/: CharacterController.cppm  CharacterMovement.cppm
src/Gameplay/Combat/: CombatSystem.cppm
src/Gameplay/Graph/: GameplayGraph.cppm  GameplayGraphAssets.cppm
src/Gameplay/Input/: GameplayInput.cppm
src/Gameplay/Interaction/: InteractionSystem.cppm
src/Gameplay/Runtime/: GameplayBootstrap.cppm  GameplayRuntime.cppm  GameplayRuntimeCommon.cppm  GameplayRuntime_FrameLifecycle.inl  GameplayRuntime_GraphExecution.inl  GameplayRuntime_ModeAndBootstrap.inl  GameplayRuntime_PublicApi.inl  GameplaySceneSync.cppm
src/Input/: ControllerBase.cppm  Input.cppm  InputCore.cppm  Win32Input.cppm
src/Render/: Bindless.cppm  RHI.cppm  Render.ixx  RenderCore.cppm  RenderGraph.cppm  Renderer.cppm  RendererSettings.cppm  SceneBridge.cppm  ShaderFiles.cppm  Sync.cppm
src/Render/Animation/: AnimationController.cppm  AnimationController_api.inl  AnimationController_detail.inl  Animator.cppm
src/Render/Debug/: DebugDraw.cppm  DebugText.cppm
src/Render/Decoders/: TextureDecoderSTB.cppm
src/Render/DirectX12/: CommonDX12Structs.cppm  DebugDrawRendererDX12.cppm  DebugTextRendererDX12.cppm  DirectX12Core.cppm  DirectX12RHI.cppm  DirectX12Renderer.cppm  DirectX12TextureUploader.cppm  RenderDX12.ixx
src/Render/ImGui/: ImGuiDebugUI.cppm  ImGuiDebugUI_Common.inl  ImGuiDebugUI_Level.inl  ImGuiDebugUI_LevelFile.inl  ImGuiDebugUI_LevelHierarchy.inl  ImGuiDebugUI_LevelInspector.inl  ImGuiDebugUI_LevelInspector_CreateImport.inl  ImGuiDebugUI_LevelInspector_NodeInspector.inl  ImGuiDebugUI_LevelInspector_NodeSelection.inl  ImGuiDebugUI_LevelInspector_SelectionAndPanel.inl  ImGuiDebugUI_LevelInspector_SelectionPanels.inl  ImGuiDebugUI_LevelShared.inl  ImGuiDebugUI_Light.inl  ImGuiDebugUI_Reflections.inl  ImGuiDebugUI_RendererCore.inl  ImGuiDebugUI_RendererFacade.inl
src/Render/Model/: AnimationClip.cppm  AssimpImportShared.inl  AssimpLoader.cppm  AssimpSceneLoader.cppm  ObjLoader.cppm  Skeleton.cppm  SkinnedMesh.cppm
src/Render/OpenGL/: OpenGLCore.cppm  OpenGLMeshRenderer.cppm  OpenGLRHI.cppm  OpenGLRHI_DeviceApi.inl  OpenGLRHI_DeviceCommands.inl  OpenGLRHI_DevicePrivate.inl  OpenGLRHI_GlHelpers.inl  OpenGLRHI_GlUtils.inl  OpenGLRenderer.cppm
src/Timer/: GameTimer.cppm  GameTimer.ixx
tests/: CMakeLists.txt  FakeTextureIO.h  TestInputCore.cpp  TestTextureStorage.cpp  TestTimerBasic.cpp  test_texture_basic.cpp
tests/unit/AnimationTests/: TestAnimationController.cpp
tests/unit/GameplayTests/: TestGameplayGraph.cpp  TestGameplayWorld.cpp
tests/unit/InputTests/: TestCameraController.cpp  TestControllerBase.cpp
tests/unit/Math/: MathTestHelper.h  TestMathUtils.cpp
tests/unit/RenderTests/: TestLevelWorld.cpp
tests/unit/ResourceTests/: TestTextureStorage.cpp
tests/unit/TimerTests/: TestTimerBasic.cpp
(+83 files in other folders)
